--- a/www/css/index.css
+++ b/www/css/index.css
@@ -17,6 +17,7 @@
  * under the License.
  */
 * {
+	margin: 5px;
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
 
@@ -24,8 +25,6 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-attachment:fixed;
-    background-color:#E4E4E4;
     background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
@@ -47,16 +46,12 @@ body {
 
 /* Portrait layout (default) */
 .app {
-   // background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:50%;
-   // height:50px;                   /* text area height */
-   // width:225px;                   /* text area width */
-    text-align:center;
-    padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
-    margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
-                                   /* offset horizontal: half of text area width */
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 25%;
+    text-align: center;
+    margin: auto;
 }
 
 /* Landscape layout (with min-width) */
@@ -110,6 +105,60 @@ h1 {
 }
  
 .blink {
-    animation:fade 3000ms infinite;
-    -webkit-animation:fade 3000ms infinite;
+    /*animation:fade 3000ms infinite;*/
+	display: inline-grid;
+	width: 60%;
+    /*-webkit-animation:fade 3000ms infinite;*/
+}
+button{
+	background: rgba(148, 186, 101, 0.7);
+    box-shadow: 0 3px 0 0 rgba(123, 163, 73, 0.7);
+    border-radius: 2px;
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    display: block;
+    font-size: 1.2em;
+    line-height: 0.6em;
+    outline: none;
+    padding: .8em 0;
+    text-shadow: 0 1px #68B25B;
+}
+div.accordion {
+        background-color: #eee;
+        color: #444;
+        cursor: pointer;
+        padding: 18px;
+        border: none;
+        text-align: left;
+        outline: none;
+        font-size: 15px;
+        transition: 0.4s;
+}
+div.accordion.active, div.accordion:hover {
+        background-color: #ccc;
+        margin-bottom: 10px;
+}
+
+div.accordion:after {
+        content: '\002B';
+        color: #777;
+        font-weight: bold;
+        float: right;
+        margin-left: 5px;
+}
+
+div.accordion.active:after {
+        content: "\2212";
+}
+
+div.panel {
+        background-color: white;
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.2s ease-out;
+}
+
+div.panel > button{
+		width: 100%;
 }
